[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/deleteme_tomcole.gd" type="Script" id=1]
[ext_resource path="res://asset/tomcole/01.png" type="Texture" id=2]
[ext_resource path="res://asset/tomcole/02.png" type="Texture" id=3]
[ext_resource path="res://asset/tomcole/stand.png" type="Texture" id=4]
[ext_resource path="res://asset/tomcole/talk.png" type="Texture" id=5]
[ext_resource path="res://asset/tomcole/boba.png" type="Texture" id=6]
[ext_resource path="res://gui_dialog.tscn" type="PackedScene" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "talk",
"speed": 3.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ) ],
"loop": false,
"name": "boba",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 252.46, 148.575 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "boba"
frame = 1
playing = true

[node name="cl" parent="." instance=ExtResource( 7 )]

[node name="Tween" type="Tween" parent="."]

[node name="talk" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="wasaa" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="talk2" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="boba" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="talk" to="." method="_on_talk_timeout"]
[connection signal="timeout" from="wasaa" to="." method="_on_wasaa_timeout"]
[connection signal="timeout" from="talk2" to="." method="_on_talk2_timeout"]
[connection signal="timeout" from="boba" to="." method="_on_boba_timeout"]
